ingress-http/ingress-http-app-nginxred.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-app-nginxred
spec:
  ingressClassName: nginx
  rules:
  - host: nginxred.clederson.com
    http:
      paths:
      - backend:
          service:
            name: nginxhello-red
            port:
              number: 80
        path: /
        pathType: Prefix
