ingress-http/ingress-http-app-tea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-app-tea

spec:
  ingressClassName: nginx
  rules:
  - host: tea.clederson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apptea
            port:
              number: 80
