ingress-http/ingress-http-hello-world.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-hello-world
spec:
  ingressClassName: nginx
  rules:
  - host: hello.clederson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
