ingress-http/ingress-http-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http-path-example
spec:
  rules:
  - host: clederson.com
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: apptea
            port:
              number: 80
